# fake_news_nlp

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py
configs/: settings.py
docs/: FakeNewsDetector.postman_collection.json
notebook/: ecf_fake_news.ipynb
utils/: utils_logs.py
