[project]
name = "fake-news-nlp"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "tensorflow>=2.21.0",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
